force-app/main/default/objects/Donations__c/fields/Remarks_Import__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Import__c</fullName>
    <label>Remarks Import</label>
    <length>100</length>
    <type>Text</type>
</CustomField>