force-app/main/default/objects/Donations__c/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <label>Salesforce ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>