force-app/main/default/objects/Donations__c/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <label>Segment Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>