force-app/main/default/objects/Donations__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shower Gel</fullName>
            </value>
            <value>
                <fullName>Hair Spray</fullName>
            </value>
            <value>
                <fullName>Soap Powder</fullName>
            </value>
            <value>
                <fullName>Lux Soap</fullName>
            </value>
            <value>
                <fullName>Toothpaste</fullName>
            </value>
            <value>
                <fullName>Basin</fullName>
            </value>
            <value>
                <fullName>Stain Remover</fullName>
            </value>
            <value>
                <fullName>Dish Washing Paste</fullName>
            </value>
            <value>
                <fullName>Shower Foam</fullName>
            </value>
            <value>
                <fullName>Hair Gel</fullName>
            </value>
            <value>
                <fullName>Detergent</fullName>
            </value>
            <value>
                <fullName>Camay</fullName>
            </value>
            <value>
                <fullName>Listrine</fullName>
            </value>
            <value>
                <fullName>Pail</fullName>
            </value>
            <value>
                <fullName>Scrub and Shine</fullName>
            </value>
            <value>
                <fullName>Comb</fullName>
            </value>
            <value>
                <fullName>Disinfectant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>