force-app/main/default/objects/Donations__c/fields/Tax_Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Tax_Receipt_No__c</fullName>
    <inlineHelpText>If the prefix is T, it is a tax-deductible donation
If the prefix is N, it is a non-tax deductible donation</inlineHelpText>
    <label>Tax Receipt No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>