force-app/main/default/objects/Donations__c/fields/Tax_Receipt_Running_No__c.field-meta.xml
<CustomField>
    <fullName>Tax_Receipt_Running_No__c</fullName>
    <label>Tax Receipt Running No</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>