force-app/main/default/objects/Donations__c/fields/Tax_Recipient_Full_Name_Entered__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_Full_Name_Entered__c</fullName>
    <label>Tax Recipient Full Name (Entered)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>