force-app/main/default/objects/Donations__c/fields/Tax_Recipient_ID_No_Entered__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_ID_No_Entered__c</fullName>
    <label>Tax Recipient ID No. (Entered)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>