force-app/main/default/objects/Donations__c/fields/Tax_Recipient_Individual__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recipient_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Recipient Individual</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donations (Tax Recipient Contact)</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>