force-app/main/default/objects/Donations__c/fields/Tdr__c.field-meta.xml
<CustomField>
    <fullName>Tdr__c</fullName>
    <label>Tdr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>