force-app/main/default/objects/Donations__c/fields/Total_Donation_To_Be_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_To_Be_Acknowledged__c</fullName>
    <label>Total Donation To Be Acknowledged</label>
    <length>20</length>
    <type>Text</type>
</CustomField>