force-app/main/default/objects/Donations__c/fields/Total_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Value__c</fullName>
    <formula>Quantity__c * Market_Value_Per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>