force-app/main/default/objects/Donations__c/fields/Type_of_Item__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Item__c</fullName>
    <label>Type of Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perishable</fullName>
            </value>
            <value>
                <fullName>Non-Perishable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>