force-app/main/default/objects/Donations__c/fields/Void__c.field-meta.xml
<CustomField>
    <fullName>Void__c</fullName>
    <label>Void</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>