force-app/main/default/objects/Donations__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Code</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>