force-app/main/default/objects/Donations__c/fields/X3rd_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Ref_No__c</fullName>
    <label>3rd Ref No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>