force-app/main/default/objects/Donations__c/fields/yearmonth__c.field-meta.xml
<CustomField>
    <fullName>yearmonth__c</fullName>
    <description>mark for deletion. this was used to group donation per year month, so that tax receipt no can be restarted to 1 every month. The current logic is employing progressive method, so this field is not utilized anymore</description>
    <label>(del) yearmonth</label>
    <length>6</length>
    <type>Text</type>
</CustomField>