force-app/main/default/objects/Donations__c/recordTypes/Grant.recordType-meta.xml
<RecordType>
    <fullName>Grant</fullName>
    <active>true</active>
    <label>Grant</label>
</RecordType>