force-app/main/default/objects/Donations__c/recordTypes/In_Kind.recordType-meta.xml
<RecordType>
    <fullName>In_Kind</fullName>
    <active>true</active>
    <label>In-Kind</label>
</RecordType>