force-app/main/default/objects/Donations__c/validationRules/Frequency_Type_One_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Frequency_Type_One_Time</fullName>
    <active>true</active>
    <description>Frequency Type One-time can not have a Recurring Donation id</description>
    <errorConditionFormula>AND(
TEXT( Frequency_Type__c ) = &apos;One-time&apos;,
NOT( ISBLANK(Recurring_Donation__c) )
)</errorConditionFormula>
    <errorDisplayField>Recurring_Donation__c</errorDisplayField>
    <errorMessage>Frequency Type : &apos;One-time&apos; can&apos;t have recurring donation</errorMessage>
</ValidationRule>