force-app/main/default/objects/Donations__c/validationRules/Frequency_Type_Recurring_With_RD.validationRule-meta.xml
<ValidationRule>
    <fullName>Frequency_Type_Recurring_With_RD</fullName>
    <active>false</active>
    <description>Frequency Type = Recurring, must have RD</description>
    <errorConditionFormula>AND(
TEXT( Frequency_Type__c ) = &apos;Recurring&apos;,
ISBLANK( Recurring_Donation__c  )
)</errorConditionFormula>
    <errorDisplayField>Recurring_Donation__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>