force-app/main/default/objects/Donations__c/validationRules/Sync_Contact_Donor_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Sync_Contact_Donor_Type</fullName>
    <active>false</active>
    <description>Field &apos;Donor Type&apos; must be same with corresponding Contact &apos;Donor Type&apos;</description>
    <errorConditionFormula>Text(Donor_Type__c) != Text(Donor_Name__r.Donor_Type__c)</errorConditionFormula>
    <errorDisplayField>Donor_Type__c</errorDisplayField>
    <errorMessage>Donor Type is different than Contact&apos;s Donor Account Type</errorMessage>
</ValidationRule>