force-app/main/default/objects/Donations__c/validationRules/Sync_RD_Donor_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Sync_RD_Donor_Account</fullName>
    <active>true</active>
    <description>If Frequency type = &apos;Recurring&apos;, Donor Account must be same with corresponding Recurring Donation</description>
    <errorConditionFormula>AND (
Text(Frequency_Type__c) = &apos;Recurring&apos;, 
Donor_Account__r.Id !=  Recurring_Donation__r.Account__r.Id 
)</errorConditionFormula>
    <errorDisplayField>Donor_Account__c</errorDisplayField>
    <errorMessage>Donor Account is different than RD&apos;s Donor Account</errorMessage>
</ValidationRule>