force-app/main/default/objects/Donations__c/validationRules/Sync_RD_Payment_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Sync_RD_Payment_Method</fullName>
    <active>true</active>
    <description>If Frequency type = &apos;Recurring&apos;, Payment Method must be same with corresponding Recurring Donation</description>
    <errorConditionFormula>AND (
Text(Frequency_Type__c) = &apos;Recurring&apos;, 
Text(Payment_Method__c) !=  Text(Recurring_Donation__r.Payment_Method__c)
)</errorConditionFormula>
    <errorDisplayField>Payment_Method__c</errorDisplayField>
    <errorMessage>Payment Method is different than RD&apos;s Payment Method</errorMessage>
</ValidationRule>