force-app/main/default/objects/Donations__c/validationRules/Tax_Information_must_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Information_must_complete</fullName>
    <active>true</active>
    <description>If one of these fields: Id type is entered, id no and Tax recipient Full Name has value, then all fields must be complete</description>
    <errorConditionFormula>AND(
 OR( NOT( ISBLANK( TEXT( ID_Type_Entered__c))), 
     NOT( ISBLANK( Tax_Recipient_ID_No_Entered__c)),
     NOT( ISBLANK( Tax_Recipient_Full_Name_Entered__c))
 ),
 OR( ISBLANK( TEXT( ID_Type_Entered__c )),
     ISBLANK( Tax_Recipient_ID_No_Entered__c),
     ISBLANK( Tax_Recipient_Full_Name_Entered__c)
 )
)</errorConditionFormula>
    <errorMessage>Please complete all fields: Id Type, Id No, and Tax Recipient Full Name, or leave them all blank</errorMessage>
</ValidationRule>