force-app/main/default/objects/Donations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Old_Tax_Receipt_No__c</columns>
    <columns>Tax_Receipt_Running_No__c</columns>
    <columns>Tax_Receipt_No__c</columns>
    <columns>Recurring_Donation__c</columns>
    <columns>Donor_Name__c</columns>
    <columns>Donor_Account__c</columns>
    <columns>Donation_Amount__c</columns>
    <columns>Donation_Date__c</columns>
    <columns>Donation_Datetime__c</columns>
    <columns>Cleared_Datetime__c</columns>
    <columns>Donation_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Frequency_Period__c</columns>
    <columns>Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>