force-app/main/default/objects/Donations__c/listViews/Imported_Donations.listView-meta.xml
<ListView>
    <fullName>Imported_Donations</fullName>
    <columns>Donation_Date__c</columns>
    <columns>NAME</columns>
    <columns>Donor_Name__c</columns>
    <columns>Tax_Receipt_No__c</columns>
    <columns>X3rd_Ref_No__c</columns>
    <columns>Donor_Account__c</columns>
    <columns>Donation_Status__c</columns>
    <columns>Donation_Amount__c</columns>
    <columns>DonationSource__c</columns>
    <columns>Cleared_Date__c</columns>
    <columns>Frequency_Type__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>BankAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Imported Donations</label>
</ListView>